<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/ivIconStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_store_24"
            app:layout_constraintBottom_toBottomOf="@+id/tfLayout"
            app:layout_constraintTop_toTopOf="@id/tfLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintStart_toEndOf="@id/ivIconStore"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tfLayout"
            android:layout_marginStart="16dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivIconService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_room_service_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvQuestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvQuestion"/>

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toEndOf="@id/ivIconService"
            app:layout_constraintTop_toBottomOf="@+id/tfLayout" />

        <RadioGroup
            android:id="@+id/rgTipOptions"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:checkedButton="@id/rbTwentyPercent"
            app:layout_constraintStart_toStartOf="@id/tvQuestion"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

            <RadioButton
                android:id="@+id/rbTwentyPercent"
                android:text="@string/amazing_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbEighteenPercent"
                android:text="@string/good_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbTenPercent"
                android:text="@string/ok_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <ImageView
            android:id="@+id/ivRoundUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_call_made_24"
            app:layout_constraintBottom_toBottomOf="@+id/swRound"
            app:layout_constraintTop_toTopOf="@+id/swRound"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swRound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/round_tip"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivRoundUp"
            app:layout_constraintTop_toBottomOf="@+id/rgTipOptions"/>

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/swRound"
            app:layout_constraintTop_toBottomOf="@+id/swRound" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

